fix images not centered on index

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -23,4 +23,11 @@
     font-size: 14px;
     margin-bottom: 10px;
   }
+
+  img, iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+  }
 }
